--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ sqlalchemy-pagination = "^0.0.2"
 sqlalchemy = "~1.3.0"
 python-dotenv = "^0.16.0"
 console-progressbar = "^1.1.2"
+finder = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 
