documentation and some improvements on schema parsing

--- a/alembic.ini
+++ b/alembic.ini
@@ -39,7 +39,7 @@ prepend_sys_path = .
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg2://postgres:123@localhost/default
+# sqlalchemy.url = postgresql+psycopg2://postgres:123@localhost/default
 
 
 [post_write_hooks]
